--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Mako==1.2.4
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.1
+psycopg2-binary==2.9.7
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 Werkzeug==2.3.7
