--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 Flask==2.3.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
+Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 itsdangerous==2.1.2
@@ -13,6 +14,7 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.1
 psycopg2-binary==2.9.7
+PyJWT==2.8.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 Werkzeug==2.3.7
