--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.12.0
+aniso8601==9.0.1
+black==23.9.1
 blinker==1.6.2
 click==8.1.7
 Flask==2.3.3
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
+Flask-RESTful==0.3.10
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
@@ -12,9 +15,14 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+mypy-extensions==1.0.0
 packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
+pytz==2023.3.post1
+six==1.16.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 Werkzeug==2.3.7
