--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 alembic==1.12.0
 aniso8601==9.0.1
+apispec==6.3.0
+black==23.9.1
 blinker==1.6.2
 click==8.1.7
 Flask==2.3.3
+flask-apispec==0.11.4
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
 Flask-RESTful==0.3.10
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -21,6 +25,7 @@ platformdirs==3.10.0
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 six==1.16.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
