--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 gunicorn==21.2.0
 iniconfig==2.0.0
-isort==5.12.0
+isort==6.0.0b2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lazy-object-proxy==1.9.0
