--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,21 @@ click==8.1.3
 dill==0.3.6
 distlib==0.3.6
 filelock==3.12.2
-Flask==2.2.5
+Flask==2.3.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.0.5
+Flask-SQLAlchemy==3.1.1
 greenlet==2.0.2
 gunicorn==21.2.0
 iniconfig==2.0.0
-isort==6.0.0b2
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lazy-object-proxy==1.9.0
 Mako==1.2.4
 MarkupSafe==2.1.3
-marshmallow==3.19.0
+marshmallow==3.20.1
 mccabe==0.7.0
 packaging==23.1
 platformdirs==3.8.0
@@ -35,8 +35,8 @@ PyYAML==6.0.1
 six==1.16.0
 SQLAlchemy==2.0.21
 tomlkit==0.11.8
-typing_extensions==4.7.0
+typing_extensions==4.8.0
 virtualenv==20.23.1
 webargs==8.3.0
-Werkzeug==2.2.3
+Werkzeug==2.3.6
 wrapt==1.15.0
