--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,33 @@
 alembic==1.12.0
 aniso8601==9.0.1
 apispec==6.3.0
-astroid==2.15.5
+black==23.9.1
 blinker==1.6.2
-click==8.1.3
-dill==0.3.6
-distlib==0.3.6
-filelock==3.12.2
-Flask==2.2.5
+click==8.1.7
+Flask==2.3.3
+flask-apispec==0.11.4
 Flask-Mail==0.9.1
-Flask-Migrate==4.0.5
+Flask-Migrate==4.0.4
 Flask-RESTful==0.3.10
+Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 gunicorn==21.2.0
-iniconfig==2.0.0
-isort==6.0.0b2
 itsdangerous==2.1.2
 Jinja2==3.1.2
-lazy-object-proxy==1.9.0
 Mako==1.2.4
 MarkupSafe==2.1.3
-marshmallow==3.19.0
-mccabe==0.7.0
+marshmallow==3.20.1
+mypy-extensions==1.0.0
 packaging==23.1
-platformdirs==3.8.0
-pluggy==1.2.0
+pathspec==0.11.2
+platformdirs==3.10.0
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
-pylint==2.17.4
-pytest==7.4.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 six==1.16.0
-SQLAlchemy==2.0.21
-tomlkit==0.11.8
-typing_extensions==4.7.0
-virtualenv==20.23.1
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
 webargs==8.3.0
-Werkzeug==2.2.3
-wrapt==1.15.0
+Werkzeug==2.3.7
